----------------------------------------------------------------------
 OmegaT 3.0.8 update 4 
----------------------------------------------------------------------
   0 Enhancement
   0 Bug fix
   1 Localisation update
----------------------------------------------------------------------
3.0.8 update 4 vs. 3.0.8 update 3

  Localisation updates:

  - Italian localisation updated to 3.0.8 update 2 (UI)

----------------------------------------------------------------------
 OmegaT 3.0.8 update 3 (2014-01-27)
----------------------------------------------------------------------
   2 Enhancements
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
3.0.8 update 3 vs. 3.0.8 update 2

  Implemented requests:

  - Insert Next Missing Tag Pair 
  https://sourceforge.net/p/omegat/feature-requests/947/

  Other enhancements:

  - New Project can now be called with the Ctrl+Shift+N shortcut

  Bug fixes:

  - Under the Mac with Java 1.7, OmegaT could freeze when using
New Project or Open Project

----------------------------------------------------------------------
 OmegaT 3.0.8 update 2 (2014-01-23)
----------------------------------------------------------------------
   7 Enhancements
   4 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.0.8 update 2 vs. 3.0.8 update 1

  Implemented requests:

  - XLIFF filter: Ignore type and ctype attributes when building <ph> tag shortcuts 
  https://sourceforge.net/p/omegat/feature-requests/938/

  - Added dummy Google Translate API key in the Mac package
  https://sourceforge.net/p/omegat/feature-requests/940/

  - Chinese (ZH.*) segmentation rules added
  http://sourceforge.net/p/omegat/feature-requests/945/

  Other enhancements:
  
  - New Korean tokenizer. As it is still "beta", it it not yet the default
tokenizer for Korean, and has to be selected manually in the list.
